--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "typescript": "^4.0.3",
+    "typy": "^3.3.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
